Tue Sep 19 13:16:29 BST 2000 Chris Emerson <chris.emerson@open.muscat.com>

	* malloc tracking now copes with free(0).

	* Added OM_MALLOC_TRAP[_COUNT], similar to OM_NEW_TRAP[_COUNT].

	* Moved an Assertion in OmStem to somewhere more useful.

	* Fixed a memory leak in the French stemmer

Tue Sep 19 12:40:21 BST 2000  Richard Boulton <richard.boulton@open.muscat.com>

	* Add CME_FIND_HSTRERROR to acinclude.m4, by adding it to lists in
	  buildall and configure.in.

Tue Sep 19 12:11:58 BST 2000 Olly Betts

	* More work on tests.

Tue Sep 19 10:50:43 BST 2000 Olly Betts

	* More tests in apitest and includetest changed to use TEST_* macros.

Tue Sep 19 10:14:32 BST 2000 Olly Betts

	* Include genacinclude.sh in the distribution from the correct
	  directory.

Mon Sep 18 19:13:03 BST 2000  Richard Boulton <richard.boulton@open.muscat.com>

	* Various work on Quartz - logfiles, putting general structure in
	  place, etc.

Mon Sep 18 19:10:23 BST 2000 Chris Emerson <chris.emerson@open.muscat.com>

	* Slightly more accurate malloc/realloc implementation

Mon Sep 18 18:35:32 BST 2000 Olly Betts

	* Many tests in apitest changed to use TEST_* macros.

Mon Sep 18 18:23:50 BST 2000 Chris Emerson <chris.emerson@open.muscat.com>

	* Can now add checking for memory leaks in testsuite via
	  LD_PRELOAD of malloccheck.so.  Seems to have a few problems
	  at the moment, though.

	* Added a test for the malloc tracking to internaltest.

Mon Sep 18 17:38:38 BST 2000 Olly Betts

	* All api tests now have a number suffix.

	* apitest_parser.pm cope with tests being declared "static".
	
Mon Sep 18 17:19:32 BST 2000 Olly Betts

	* Efficiency tweak to max_or_terms comparator - don't call
	  get_maxweight() if get_termfreq() is zero.

	* More minor rearrangments in preparation for merging LocalMatch and
	  MultiMatch.

Mon Sep 18 15:43:46 BST 2000 Olly Betts

	* A testsuite programs asked to run test "foo" will now run tests
	  "foo1", "foo2", ... if they exist.
