@@ -1,3 +1,7 @@
+Tue Sep 19 13:42:57 BST 2000 Chris Emerson <chris.emerson@open.muscat.com>
+
+	* Fixed a memory leak in the Sleepycat backend.
+
 Tue Sep 19 13:16:29 BST 2000 Chris Emerson <chris.emerson@open.muscat.com>
 
 	* malloc tracking now copes with free(0).
